name:                isstring-hack
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ethanpailes/blog-code/#readme
license:             BSD3
license-file:        LICENSE
author:              Ethan Pailes
maintainer:          ethanpailes@gmail.com
copyright:           2016 Ethan Pailes
category:            Hackery
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:
        base >= 4.7 && < 5
      , network-uri
      , regex-compat
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/isstring-hack
